# GATSP

./: CMakeLists.txt  README.md
include/ga/: Chromosome.h  Environment.h  GeneticAlgorithm.h
include/tsp/: Enums.h  TSP.h  TSPLIB.h  Type.h
libs/: Stopwatch.hpp
src/: CMakeLists.txt  main.cpp
src/ga/: CMakeLists.txt  Chromosome.cpp  Environment.cpp  GeneticAlgorithm.cpp
src/tsp/: CMakeLists.txt  DistanceFunctions.cpp  DistanceFunctions.h  TSP.cpp  TSPLIB.cpp
tests/: CMakeLists.txt
tests/tsp/: TSPLIBTest.cpp  TSPTest.cpp
